--- a/Dice Throwing/src/index.css
+++ b/Dice Throwing/src/index.css
@@ -6,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #043f21;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -48,12 +48,19 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.Buttons {
+  display: flex;
+  gap: 10px;
 }
 
 @media (prefers-color-scheme: light) {
